Bug 586754 xpcshell tests should use relativesrcdir instead of $MODULE r=:Mitch a=NPOTB
UltraBlame original commit: d62bc37cb42efe8dafa403bc7bc8652c31d43589

--- a/netwerk/test/Makefile.in
+++ b/netwerk/test/Makefile.in
@@ -408,6 +408,11 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+netwerk
+/
+test
 include
 (
 DEPTH
@@ -754,7 +759,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
@@ -784,7 +789,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
