--- a/toolkit/crashreporter/test/Makefile.in
+++ b/toolkit/crashreporter/test/Makefile.in
@@ -651,7 +651,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
@@ -670,7 +670,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
@@ -714,7 +714,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
