--- a/uriloader/exthandler/tests/Makefile.in
+++ b/uriloader/exthandler/tests/Makefile.in
@@ -416,6 +416,13 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+uriloader
+/
+exthandler
+/
+tests
 DIRS
 +
 =
@@ -544,7 +551,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
