--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -5184,24 +5184,6 @@ the
 Nitro
 assembler
 #
-INCLUDES
-+
-=
--
-I
-(
-srcdir
-)
-/
-assembler
--
-I
-(
-srcdir
-)
-/
-yarr
-#
 #
 Needed
 to
@@ -5242,17 +5224,53 @@ CXXFLAGS
 +
 =
 -
-DENABLE_ASSEMBLER
+DUSE_SYSTEM_MALLOC
 =
 1
+ifeq
+(
+android
+(
+TARGET_VENDOR
+)
+)
+CXXFLAGS
++
+=
 -
-DUSE_SYSTEM_MALLOC
+DWTF_PLATFORM_ANDROID
+=
+1
+else
+CXXFLAGS
++
+=
+-
+DENABLE_ASSEMBLER
 =
 1
 -
 DENABLE_JIT
 =
 1
+endif
+INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+assembler
+-
+I
+(
+srcdir
+)
+/
+yarr
 #
 #
 END
