bug 533874, r=jimb: expose the parser as a JS API
UltraBlame original commit: 842ca3e81a78ad70bf1a1364e0d2cc45513bb7dd

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -919,6 +919,10 @@ jspropertytree
 .
 cpp
 \
+jsreflect
+.
+cpp
+\
 jsregexp
 .
 cpp
@@ -1158,6 +1162,10 @@ jsprvtd
 h
 \
 jspubtd
+.
+h
+\
+jsreflect
 .
 h
 \
@@ -3466,6 +3474,9 @@ jsfun
 .
 o
 jsinterp
+.
+o
+jsreflect
 .
 o
 jsregexp
