Bug 586303 - Fix lirasm test string creation. r=jbramley
UltraBlame original commit: 1afb7b39853f1481e8d12fb791a4ea85ea9430b3

--- a/js/src/lirasm/tests/call1.in
+++ b/js/src/lirasm/tests/call1.in
@@ -6,7 +6,7 @@ a
 =
 immi
 65
-sti
+sti2c
 a
 ptr
 0
@@ -14,7 +14,7 @@ b
 =
 immi
 66
-sti
+sti2c
 b
 ptr
 1
@@ -22,7 +22,7 @@ c
 =
 immi
 67
-sti
+sti2c
 c
 ptr
 2
@@ -30,7 +30,7 @@ zero
 =
 immi
 0
-sti
+sti2c
 zero
 ptr
 3
