Bug 572966: Test that InstallTrigger callbacks can redirect to a relative url. r=robstrong, a=blocking-b5
UltraBlame original commit: 91ec3dadef64640e589822f5133b6ffc25ff6fca

--- a/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
+++ b/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
@@ -604,6 +604,10 @@ browser_multipackage
 .
 js
 \
+browser_trigger_redirect
+.
+js
+\
 unsigned
 .
 xpi
@@ -681,6 +685,10 @@ startsoftwareupdate
 html
 \
 installchrome
+.
+html
+\
+triggerredirect
 .
 html
 \
