--- a/configure.in
+++ b/configure.in
@@ -9221,15 +9221,7 @@ AC_DEFINE_UNQUOTED
 __ENVIRONMENT_MAC_OS_X_VERION_MIN_REQUIRED__
 _MACOSX_DEPLOYMENT_TARGET
 )
-elif
-test
--
-z
-"
-MACOSX_DEPLOYMENT_TARGET
-"
-;
-then
+else
 dnl
 No
 value
@@ -9247,12 +9239,47 @@ use
 architecture
 minimum
 .
+case
+"
+{
+target_cpu
+}
+"
+in
+ppc
+*
+)
 export
 MACOSX_DEPLOYMENT_TARGET
 =
 10
 .
 5
+;
+;
+i
+*
+86
+)
+export
+MACOSX_DEPLOYMENT_TARGET
+=
+10
+.
+5
+;
+;
+x86_64
+)
+export
+MACOSX_DEPLOYMENT_TARGET
+=
+10
+.
+6
+;
+;
+esac
 fi
 ;
 ;
