Bug 567954 - disable test_mixed_principals.html for constant orange, a=test-only
UltraBlame original commit: f31eb14e3014558390b73128c3d5985025fc6d19

--- a/content/media/test/Makefile.in
+++ b/content/media/test/Makefile.in
@@ -889,10 +889,6 @@ test_media_selection
 .
 html
 \
-test_mixed_principals
-.
-html
-\
 test_mozLoadFrom
 .
 html
@@ -1038,6 +1034,17 @@ Bug
 :
 #
 test_preload_suspend
+.
+html
+#
+Bug
+567954
+and
+Bug
+574586
+:
+#
+test_mixed_principals
 .
 html
 #
