Bug 513681 - part 2 - remove support for the MOZ_IMG_DECODERS build option.r=joe,khuey.a=blocker
UltraBlame original commit: bdaed1b28b382e62c433e5d08a64101ee092c52e

--- a/modules/libpr0n/decoders/Makefile.in
+++ b/modules/libpr0n/decoders/Makefile.in
@@ -411,16 +411,12 @@ config
 autoconf
 .
 mk
-ifneq
-(
-(
-filter
-icon
-(
-MOZ_IMG_DECODERS
-)
-)
-)
+DECODERS
+=
+png
+gif
+jpeg
+bmp
 ifneq
 (
 (
@@ -517,20 +513,11 @@ icon
 mac
 icon
 endif
-endif
-#
-icon
 DIRS
 +
 =
 (
-filter
--
-out
-icon
-(
-MOZ_IMG_DECODERS
-)
+DECODERS
 )
 include
 (
