Bug 513681 - part 3 - instantiate decoders without using COM goop.r=joe,a=blocker
UltraBlame original commit: 724bf8e536e5dd3ad1063fece3da7f6591d6a3fb

--- a/modules/libpr0n/src/Makefile.in
+++ b/modules/libpr0n/src/Makefile.in
@@ -471,6 +471,70 @@ cpp
 (
 NULL
 )
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+decoders
+/
+bmp
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+decoders
+/
+gif
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+decoders
+/
+jpeg
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+decoders
+/
+png
 include
 (
 topsrcdir
