Bug 513681 - part 5 - move the decoders out of their subdirectories.r=joe,a=blocker
UltraBlame original commit: 1e72e07b7275b2a587bc6dee6170afa79c36cfa0

--- a/modules/libpr0n/src/Makefile.in
+++ b/modules/libpr0n/src/Makefile.in
@@ -471,6 +471,13 @@ cpp
 (
 NULL
 )
+#
+We
+need
+to
+instantiate
+the
+decoders
 LOCAL_INCLUDES
 +
 =
@@ -485,56 +492,6 @@ modules
 libpr0n
 /
 decoders
-/
-bmp
-LOCAL_INCLUDES
-+
-=
--
-I
-(
-topsrcdir
-)
-/
-modules
-/
-libpr0n
-/
-decoders
-/
-gif
-LOCAL_INCLUDES
-+
-=
--
-I
-(
-topsrcdir
-)
-/
-modules
-/
-libpr0n
-/
-decoders
-/
-jpeg
-LOCAL_INCLUDES
-+
-=
--
-I
-(
-topsrcdir
-)
-/
-modules
-/
-libpr0n
-/
-decoders
-/
-png
 include
 (
 topsrcdir
