Backing out Bug 513681 and Bug 587371 for timeouts.
UltraBlame original commit: 3542b2bfa001604d2e0cbda82e8d588bb4e1331e

--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -534,6 +534,9 @@ MOZ_DEBUG
 MOZ_DEBUG_SYMBOLS
 =
 MOZ_DEBUG_SYMBOLS
+MOZ_PROFILE_MODULES
+=
+MOZ_PROFILE_MODULES
 MOZ_DEBUG_ENABLE_DEFS
 =
 MOZ_DEBUG_ENABLE_DEFS
@@ -549,6 +552,9 @@ MOZ_DEBUG_LDFLAGS
 MOZ_EXTENSIONS
 =
 MOZ_EXTENSIONS
+MOZ_IMG_DECODERS
+=
+MOZ_IMG_DECODERS
 MOZ_IMG_ENCODERS
 =
 MOZ_IMG_ENCODERS
