--- a/modules/libpr0n/decoders/bmp/Makefile.in
+++ b/modules/libpr0n/decoders/bmp/Makefile.in
@@ -192,6 +192,15 @@ s
 )
 :
 #
+Christian
+Biesinger
+<
+cbiesinger
+web
+.
+de
+>
+#
 #
 Alternatively
 the
@@ -389,6 +398,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -410,36 +425,60 @@ autoconf
 mk
 MODULE
 =
-imglib2
-DIRS
+imgbmp
+LIBRARY_NAME
 =
-public
+imgbmp_s
+FORCE_STATIC_LIB
+=
+1
+MODULE_NAME
+=
+nsBMPModule
+LIBXUL_LIBRARY
+=
+1
+CPPSRCS
+=
+nsBMPDecoder
+.
+cpp
+nsICODecoder
+.
+cpp
+nsIconDecoder
+.
+cpp
+#
+ns
+[
+BMP
+ICO
+Icon
+]
+Decoder
+.
+cpp
+all
+include
+RasterImage
+.
+h
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
 src
-ifdef
-MOZ_IMG_DECODERS
-DIRS
-+
-=
-decoders
-endif
-ifdef
-MOZ_IMG_ENCODERS
-DIRS
-+
-=
-encoders
-endif
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-test
-endif
-DIRS
-+
-=
-build
+/
 include
 (
 topsrcdir
