--- a/modules/libpr0n/decoders/gif/Makefile.in
+++ b/modules/libpr0n/decoders/gif/Makefile.in
@@ -389,6 +389,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -410,36 +416,46 @@ autoconf
 mk
 MODULE
 =
-imglib2
-DIRS
+imggif
+LIBRARY_NAME
 =
-public
+imggif_s
+FORCE_STATIC_LIB
+=
+1
+MODULE_NAME
+=
+nsGIFModule2
+LIBXUL_LIBRARY
+=
+1
+CPPSRCS
+=
+nsGIFDecoder2
+.
+cpp
+#
+nsGIFDecoder2
+.
+cpp
+includes
+RasterImage
+.
+h
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
 src
-ifdef
-MOZ_IMG_DECODERS
-DIRS
-+
-=
-decoders
-endif
-ifdef
-MOZ_IMG_ENCODERS
-DIRS
-+
-=
-encoders
-endif
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-test
-endif
-DIRS
-+
-=
-build
 include
 (
 topsrcdir
@@ -450,3 +466,9 @@ config
 rules
 .
 mk
+CXXFLAGS
++
+=
+(
+MOZ_CAIRO_CFLAGS
+)
