--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -591,6 +591,9 @@ MOZ_DEBUG_LDFLAGS
 MOZ_EXTENSIONS
 =
 MOZ_EXTENSIONS
+MOZ_IMG_DECODERS
+=
+MOZ_IMG_DECODERS
 MOZ_IMG_ENCODERS
 =
 MOZ_IMG_ENCODERS
