--- a/modules/libpr0n/decoders/jpeg/Makefile.in
+++ b/modules/libpr0n/decoders/jpeg/Makefile.in
@@ -389,6 +389,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -410,36 +416,52 @@ autoconf
 mk
 MODULE
 =
-imglib2
-DIRS
+imgjpeg
+LIBRARY_NAME
 =
-public
+imgjpeg_s
+FORCE_STATIC_LIB
+=
+1
+MODULE_NAME
+=
+nsJPEGDecoderModule
+LIBXUL_LIBRARY
+=
+1
+CPPSRCS
+=
+nsJPEGDecoder
+.
+cpp
+CSRCS
+=
+iccjpeg
+.
+c
+#
+nsJPEGDecoder
+.
+cpp
+includes
+RasterImage
+.
+h
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
 src
-ifdef
-MOZ_IMG_DECODERS
-DIRS
-+
-=
-decoders
-endif
-ifdef
-MOZ_IMG_ENCODERS
-DIRS
-+
-=
-encoders
-endif
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-test
-endif
-DIRS
-+
-=
-build
+/
 include
 (
 topsrcdir
