--- a/modules/libpr0n/decoders/png/Makefile.in
+++ b/modules/libpr0n/decoders/png/Makefile.in
@@ -389,6 +389,12 @@ DEPTH
 /
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -410,36 +416,82 @@ autoconf
 mk
 MODULE
 =
-imglib2
-DIRS
+imgpng
+LIBRARY_NAME
 =
-public
-src
-ifdef
-MOZ_IMG_DECODERS
-DIRS
-+
+imgpng_s
+FORCE_STATIC_LIB
 =
-decoders
-endif
-ifdef
+1
+MODULE_NAME
+=
+nsPNGDecoderModule
+LIBXUL_LIBRARY
+=
+1
+EXTRA_DSO_LIBS
+=
+gkgfx
+CPPSRCS
+=
+nsPNGDecoder
+.
+cpp
+ifneq
+(
+(
+filter
+png
+(
 MOZ_IMG_ENCODERS
-DIRS
+)
+)
+)
+DEFINES
 +
 =
-encoders
+-
+DMOZ_PNG_WRITE
 endif
-ifdef
-ENABLE_TESTS
-DIRS
+ifneq
+(
+(
+filter
+png
+(
+MOZ_IMG_DECODERS
+)
+)
+)
+DEFINES
 +
 =
-test
+-
+DMOZ_PNG_READ
 endif
-DIRS
+#
+nsPNGDecoder
+.
+cpp
+includes
+RasterImage
+.
+h
+LOCAL_INCLUDES
 +
 =
-build
+-
+I
+(
+topsrcdir
+)
+/
+modules
+/
+libpr0n
+/
+src
+/
 include
 (
 topsrcdir
