--- a/modules/libpr0n/encoders/png/Makefile.in
+++ b/modules/libpr0n/encoders/png/Makefile.in
@@ -444,11 +444,22 @@ DEFINES
 -
 DMOZ_PNG_WRITE
 endif
+ifneq
+(
+(
+filter
+png
+(
+MOZ_IMG_DECODERS
+)
+)
+)
 DEFINES
 +
 =
 -
 DMOZ_PNG_READ
+endif
 CPPSRCS
 =
 nsPNGEncoder
