Bug 587936 Fix a crash in gfxAlphaRecovery::RecoverAlphaSSE2 r=vladimir a=joedrew
UltraBlame original commit: 799fe4c45fe728d97d7a7688a3c8a4acc57e7c2c

--- a/gfx/thebes/Makefile.in
+++ b/gfx/thebes/Makefile.in
@@ -664,14 +664,14 @@ cpp
 NULL
 )
 endif
-ifneq
+ifeq
 (
+86
 (
-filter
-x86
-x86_64
+findstring
+86
 (
-CPU_ARCH
+OS_TEST
 )
 )
 )
@@ -688,6 +688,24 @@ MODULE_OPTIMIZE_FLAGS
 =
 -
 msse2
+endif
+ifdef
+SOLARIS_SUNPRO_CXX
+gfxAlphaRecovery
+.
+(
+OBJ_SUFFIX
+)
+:
+OS_CXXFLAGS
++
+=
+-
+xarch
+=
+sse2
+-
+xO4
 endif
 endif
 SHARED_LIBRARY_LIBS
