b=414049 dump screen on first mochitest time out (GTK) r=ted a=testing
UltraBlame original commit: 094a1b4d19b1cec4b308aaaae579a1e644e13f7d

--- a/testing/mochitest/Makefile.in
+++ b/testing/mochitest/Makefile.in
@@ -984,6 +984,22 @@ stack
 .
 pl
 endif
+ifeq
+(
+gtk2_1
+(
+MOZ_WIDGET_TOOLKIT
+)
+_
+(
+MOZ_X11
+)
+)
+TEST_HARNESS_BINS
++
+=
+screentopng
+endif
 #
 Components
 /
