Add a GDK/X11 screenshot to png utility b=414049 r=dbaron a=npotb
UltraBlame original commit: d926be226157911cf85a137a21ada79542b6fee5

--- a/configure.in
+++ b/configure.in
@@ -26569,6 +26569,156 @@ dnl
 =
 Check
 for
+Xss
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+AC_CHECK_HEADER
+(
+X11
+/
+extensions
+/
+scrnsaver
+.
+h
+AC_CHECK_LIB
+(
+Xss
+XScreenSaverQueryInfo
+[
+XSS_LIBS
+=
+"
+-
+lXss
+XEXT_LIBS
+XLIBS
+"
+AC_DEFINE
+(
+HAVE_LIBXSS
+)
+]
+XEXT_LIBS
+XLIBS
+)
+)
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Check
+for
 XIE
 dnl
 =
@@ -27085,6 +27235,10 @@ XEXT_LIBS
 AC_SUBST
 (
 XT_LIBS
+)
+AC_SUBST
+(
+XSS_LIBS
 )
 AC_MSG_CHECKING
 (
