--- a/js/src/xpconnect/shell/Makefile.in
+++ b/js/src/xpconnect/shell/Makefile.in
@@ -520,6 +520,33 @@ toolkit
 xre
 /
 endif
+ifeq
+(
+(
+OS_TEST
+)
+x86_64
+)
+#
+set
+stack
+to
+2MB
+on
+x64
+build
+.
+See
+bug
+582910
+WIN32_EXE_LDFLAGS
++
+=
+-
+STACK
+:
+2097152
+endif
 endif
 include
 (
