--- a/content/html/content/test/Makefile.in
+++ b/content/html/content/test/Makefile.in
@@ -1143,6 +1143,30 @@ test_bug561634
 .
 html
 \
+test_bug588683
+-
+1
+.
+html
+\
+test_bug588683
+-
+2
+.
+html
+\
+test_bug588683
+-
+3
+.
+html
+\
+test_bug588683
+-
+4
+.
+html
+\
 (
 NULL
 )
