--- a/xulrunner/app/macbuild/Info.plist.in
+++ b/xulrunner/app/macbuild/Info.plist.in
@@ -229,6 +229,61 @@ string
 string
 >
 <
+key
+>
+LSMinimumSystemVersionByArchitecture
+<
+/
+key
+>
+<
+dict
+>
+<
+key
+>
+i386
+<
+/
+key
+>
+<
+string
+>
+10
+.
+5
+.
+0
+<
+/
+string
+>
+<
+key
+>
+x86_64
+<
+/
+key
+>
+<
+string
+>
+10
+.
+6
+.
+0
+<
+/
+string
+>
+<
+/
+dict
+>
+<
 /
 dict
 >
