Bug 589738 - Update removed-files.in to remove modules/PropertyPanel.jsm and res/fonts/mathfontSymbol.properties, r=rs a=blocking2.0
UltraBlame original commit: 9ba488f9cb8dc5a248475279fb1f6f6b741d4313

--- a/browser/installer/removed-files.in
+++ b/browser/installer/removed-files.in
@@ -4395,6 +4395,11 @@ PopupNotifications
 jsm
 modules
 /
+PropertyPanel
+.
+jsm
+modules
+/
 Services
 .
 jsm
@@ -4920,6 +4925,18 @@ fonts
 mathfontSTIXSizeOneSym
 .
 properties
+#
+ifdef
+XP_WIN
+res
+/
+fonts
+/
+mathfontSymbol
+.
+properties
+#
+endif
 res
 /
 fonts
