--- a/security/manager/ssl/tests/mochitest/stricttransportsecurity/Makefile.in
+++ b/security/manager/ssl/tests/mochitest/stricttransportsecurity/Makefile.in
@@ -1,5 +1,4 @@
 #
-#
 *
 *
 *
@@ -142,10 +141,11 @@ The
 Original
 Code
 is
-mozilla
-.
-org
-code
+Strict
+-
+Transport
+-
+Security
 .
 #
 #
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2007
+2010
 #
 the
 Initial
@@ -191,13 +191,13 @@ s
 )
 :
 #
-Jan
-Bambas
+Sid
+Stamm
 <
-honzab
-firemni
+sid
+mozilla
 .
-cz
+com
 >
 #
 #
@@ -216,7 +216,6 @@ terms
 of
 #
 either
-of
 the
 GNU
 General
@@ -232,8 +231,8 @@ the
 GPL
 "
 )
-#
 or
+#
 the
 GNU
 Lesser
@@ -407,6 +406,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -416,21 +418,23 @@ srcdir
 VPATH
 =
 srcdir
-MODULE
+relativesrcdir
 =
-pipnss
-DIRS
-=
-\
-bugs
-\
-mixedcontent
-\
+security
+/
+ssl
+/
 stricttransportsecurity
-\
+include
 (
-NULL
+DEPTH
 )
+/
+config
+/
+autoconf
+.
+mk
 include
 (
 topsrcdir
@@ -441,3 +445,71 @@ config
 rules
 .
 mk
+_TEST_FILES
+=
+\
+plain_bootstrap
+.
+html
+\
+plain_bootstrap
+.
+html
+^
+headers
+^
+\
+subdom_bootstrap
+.
+html
+\
+subdom_bootstrap
+.
+html
+^
+headers
+^
+\
+verify
+.
+sjs
+\
+test_stricttransportsecurity
+.
+html
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
+)
