Backed out changeset 2d57f5901aa2 (bug 576026). a=bustage
UltraBlame original commit: cbb5793c529eda0f1a01a82edad05684c6978fd5

--- a/testing/mochitest/Makefile.in
+++ b/testing/mochitest/Makefile.in
@@ -596,12 +596,6 @@ test
 .
 js
 \
-chrome
--
-harness
-.
-js
-\
 ipc
 -
 overlay
@@ -862,6 +856,42 @@ pywebsocket
 mod_pywebsocket
 /
 handshake
+runtests
+.
+py
+:
+runtests
+.
+py
+.
+in
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+config
+/
+Preprocessor
+.
+py
+\
+(
+DEFINES
+)
+(
+ACDEFINES
+)
+^
+>
+GARBAGE
++
+=
+runtests
+.
+py
 libs
 :
 :
@@ -989,22 +1019,6 @@ linux
 stack
 .
 pl
-endif
-ifeq
-(
-gtk2_1
-(
-MOZ_WIDGET_TOOLKIT
-)
-_
-(
-MOZ_X11
-)
-)
-TEST_HARNESS_BINS
-+
-=
-screentopng
 endif
 #
 Components
