Bug 589145 - dexpcom accessible event classes, r=davidb, sr=neil, a=davidb
UltraBlame original commit: 4d7a1cae44c44dfc3c731f34593fbf3632e47e68

--- a/accessible/src/xpcom/Makefile.in
+++ b/accessible/src/xpcom/Makefile.in
@@ -1,4 +1,5 @@
 #
+#
 *
 *
 *
@@ -157,9 +158,8 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Mozilla
+Foundation
 .
 #
 Portions
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-1998
+2010
 #
 the
 Initial
@@ -191,13 +191,19 @@ s
 )
 :
 #
-John
-Gaunt
-(
-jgaunt
-netscape
+Alexander
+Surkov
+<
+surkov
+.
+alexander
+gmail
 .
 com
+>
+(
+original
+author
 )
 #
 #
@@ -425,142 +431,16 @@ MODULE
 accessibility
 LIBRARY_NAME
 =
-accessibility_base_s
+accessibility_xpcom_s
 LIBXUL_LIBRARY
 =
 1
 CPPSRCS
 =
 \
-AccCollector
+nsAccEvent
 .
 cpp
-\
-AccEvent
-.
-cpp
-\
-AccGroupInfo
-.
-cpp
-\
-AccIterator
-.
-cpp
-\
-filters
-.
-cpp
-\
-nsAccDocManager
-.
-cpp
-\
-nsAccessNode
-.
-cpp
-\
-nsARIAGridAccessible
-.
-cpp
-\
-nsARIAMap
-.
-cpp
-\
-nsDocAccessible
-.
-cpp
-\
-nsOuterDocAccessible
-.
-cpp
-\
-nsAccessibilityAtoms
-.
-cpp
-\
-nsCoreUtils
-.
-cpp
-\
-nsAccUtils
-.
-cpp
-\
-nsRelUtils
-.
-cpp
-\
-nsAccessibilityService
-.
-cpp
-\
-nsAccessible
-.
-cpp
-\
-nsAccessibleRelation
-.
-cpp
-\
-nsAccTreeWalker
-.
-cpp
-\
-nsBaseWidgetAccessible
-.
-cpp
-\
-nsEventShell
-.
-cpp
-\
-nsFormControlAccessible
-.
-cpp
-\
-nsRootAccessible
-.
-cpp
-\
-nsApplicationAccessible
-.
-cpp
-\
-nsCaretAccessible
-.
-cpp
-\
-nsTextAccessible
-.
-cpp
-\
-nsTextEquivUtils
-.
-cpp
-\
-nsTextAttrs
-.
-cpp
-\
-(
-NULL
-)
-EXPORTS
-=
-\
-a11yGeneric
-.
-h
-\
-nsAccessible
-.
-h
-\
-nsAccessNode
-.
-h
 \
 (
 NULL
@@ -600,7 +480,6 @@ rules
 .
 mk
 LOCAL_INCLUDES
-+
 =
 \
 -
@@ -608,124 +487,12 @@ I
 (
 srcdir
 )
-\
--
-I
-(
-srcdir
-)
 /
 .
 .
-/
-xpcom
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-html
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-xul
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-.
-.
-/
-.
-.
-/
-layout
-/
-generic
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-.
-.
-/
-.
-.
-/
-layout
-/
-xul
 /
 base
-/
-src
 \
 (
 NULL
 )
-ifndef
-DISABLE_XFORMS_HOOKS
-LOCAL_INCLUDES
-+
-=
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-xforms
-endif
-ifeq
-(
-(
-MOZ_WIDGET_TOOLKIT
-)
-gtk2
-)
-LOCAL_INCLUDES
-+
-=
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-atk
-\
-(
-NULL
-)
-endif
