Bug 589561 - Rename HTMLTimeRanges to TimeRanges, HTMLMediaError to MediaError. r=roc a=roc
UltraBlame original commit: 37f61e9d618a32ade3367c514598454b9b735a54

--- a/content/html/content/src/Makefile.in
+++ b/content/html/content/src/Makefile.in
@@ -688,7 +688,7 @@ nsHTMLMediaElement
 .
 cpp
 \
-nsHTMLMediaError
+nsMediaError
 .
 cpp
 \
@@ -696,7 +696,7 @@ nsHTMLSourceElement
 .
 cpp
 \
-nsHTMLTimeRanges
+nsTimeRanges
 .
 cpp
 \
