--- a/dom/interfaces/html/Makefile.in
+++ b/dom/interfaces/html/Makefile.in
@@ -652,11 +652,11 @@ nsIDOMHTMLUListElement
 .
 idl
 \
-nsIDOMHTMLMediaError
+nsIDOMMediaError
 .
 idl
 \
-nsIDOMHTMLTimeRanges
+nsIDOMTimeRanges
 .
 idl
 \
