Bug 586523 - Provide a version of xpcomglue_s compiled with -DMOZ_NO_MOZALLOC, r=bsmedberg
UltraBlame original commit: d8b1f82a7d890b9514be1f98ab673ff2ac3445b8

--- a/xpcom/glue/nomozalloc/Makefile.in
+++ b/xpcom/glue/nomozalloc/Makefile.in
@@ -205,6 +205,9 @@ Contributor
 s
 )
 :
+LastPass
+.
+com
 #
 #
 Alternatively
@@ -403,6 +406,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -427,6 +433,9 @@ include
 srcdir
 )
 /
+.
+.
+/
 objs
 .
 mk
@@ -437,19 +446,18 @@ EXTRA_DEPS
 srcdir
 )
 /
+.
+.
+/
 objs
 .
 mk
-DIRS
-=
-standalone
-nomozalloc
 MODULE
 =
 xpcom
 LIBRARY_NAME
 =
-xpcomglue_s
+xpcomglue_s_nomozalloc
 SUPPRESS_FAKELIB
 =
 1
@@ -464,6 +472,9 @@ I
 (
 srcdir
 )
+/
+.
+.
 /
 .
 .
@@ -505,262 +516,13 @@ cpp
 (
 NULL
 )
-#
-TODO
-nsAutoLock
-.
-h
-should
-die
-soon
-SDK_HEADERS
-=
-\
-nsArrayEnumerator
-.
-h
-\
-nsArrayUtils
-.
-h
-\
-nsAutoLock
-.
-h
-\
-nsBaseHashtable
-.
-h
-\
-nsCOMArray
-.
-h
-\
-nsCOMPtr
-.
-h
-\
-nsCRTGlue
-.
-h
-\
-nsCategoryCache
-.
-h
-\
-nsClassHashtable
-.
-h
-\
-nsComponentManagerUtils
-.
-h
-\
-nsCycleCollectionParticipant
-.
-h
-\
-nsDataHashtable
-.
-h
-\
-nsDebug
-.
-h
-\
-nsDeque
-.
-h
-\
-nsEnumeratorUtils
-.
-h
-\
-nsHashKeys
-.
-h
-\
-nsIClassInfoImpl
-.
-h
-\
-nsID
-.
-h
-\
-nsIInterfaceRequestorUtils
-.
-h
-\
-nsINIParser
-.
-h
-\
-nsISupportsImpl
-.
-h
-\
-nsISupportsUtils
-.
-h
-\
-nsIWeakReferenceUtils
-.
-h
-\
-nsInterfaceHashtable
-.
-h
-\
-nsMemory
-.
-h
-\
-nsQuickSort
-.
-h
-\
-nsRefPtrHashtable
-.
-h
-\
-nsServiceManagerUtils
-.
-h
-\
-nsStringAPI
-.
-h
-\
-nsStringGlue
-.
-h
-\
-nsTArray
-.
-h
-\
-nsTHashtable
-.
-h
-\
-nsTObserverArray
-.
-h
-\
-nsTPtrArray
-.
-h
-\
-nsTWeakRef
-.
-h
-\
-nsTextFormatter
-.
-h
-\
-nsTraceRefcnt
-.
-h
-\
-nsVersionComparator
-.
-h
-\
-nsVoidArray
-.
-h
-\
-nsWeakReference
-.
-h
-\
-pldhash
-.
-h
-\
-(
-NULL
-)
-EXPORTS_NAMESPACES
-=
-mozilla
-EXPORTS
-=
-\
-nsThreadUtils
-.
-h
-\
-nsTPriorityQueue
-.
-h
-\
-nsProxyRelease
-.
-h
-\
-nsXPTCUtils
-.
-h
-\
-(
-NULL
-)
-EXPORTS_mozilla
-=
-\
-AutoRestore
-.
-h
-\
-BlockingResourceBase
-.
-h
-\
-CondVar
-.
-h
-\
-DeadlockDetector
-.
-h
-\
-GenericFactory
-.
-h
-\
-Monitor
-.
-h
-\
-Mutex
-.
-h
-\
-SSE
-.
-h
-\
-unused
-.
-h
-\
-FileUtils
-.
-h
-\
-(
-NULL
-)
 SDK_LIBRARY
 =
 \
 (
 LIB_PREFIX
 )
-xpcomglue_s
+xpcomglue_s_nomozalloc
 .
 (
 LIB_SUFFIX
@@ -841,6 +603,30 @@ Windows
 USE_STATIC_LIBS
 =
 1
+#
+Don
+'
+t
+use
+STL
+wrappers
+here
+(
+i
+.
+e
+.
+wrapped
+<
+new
+>
+)
+;
+they
+require
+mozalloc
+STL_FLAGS
+=
 include
 (
 topsrcdir
@@ -880,6 +666,67 @@ DEFINES
 -
 D_USE_ANSI_CPP
 endif
+export
+:
+:
+(
+XPCOM_GLUE_SRC_CSRCS
+)
+(
+XPCOM_GLUE_SRC_CPPSRCS
+)
+(
+XPCOM_GLUENS_SRC_CPPSRCS
+)
+(
+topsrcdir
+)
+/
+xpcom
+/
+glue
+/
+nsStringAPI
+.
+cpp
+(
+topsrcdir
+)
+/
+xpcom
+/
+glue
+/
+GenericModule
+.
+cpp
+(
+topsrcdir
+)
+/
+xpcom
+/
+glue
+/
+DeadlockDetector
+.
+h
+(
+topsrcdir
+)
+/
+xpcom
+/
+glue
+/
+SSE
+.
+h
+(
+INSTALL
+)
+^
+.
 ifdef
 TARGET_XPCOM_ABI
 DEFINES
@@ -896,3 +743,8 @@ TARGET_XPCOM_ABI
 \
 "
 endif
+DEFINES
++
+=
+-
+DMOZ_NO_MOZALLOC
