--- a/netwerk/protocol/device/Makefile.in
+++ b/netwerk/protocol/device/Makefile.in
@@ -1,5 +1,4 @@
-/
-*
+#
 *
 *
 *
@@ -13,7 +12,7 @@ BLOCK
 *
 *
 *
-*
+#
 Version
 :
 MPL
@@ -30,8 +29,8 @@ LGPL
 2
 .
 1
-*
-*
+#
+#
 The
 contents
 of
@@ -45,7 +44,7 @@ Mozilla
 Public
 License
 Version
-*
+#
 1
 .
 1
@@ -66,7 +65,7 @@ except
 in
 compliance
 with
-*
+#
 the
 License
 .
@@ -79,7 +78,7 @@ of
 the
 License
 at
-*
+#
 http
 :
 /
@@ -92,8 +91,8 @@ org
 /
 MPL
 /
-*
-*
+#
+#
 Software
 distributed
 under
@@ -108,7 +107,7 @@ AS
 IS
 "
 basis
-*
+#
 WITHOUT
 WARRANTY
 OF
@@ -122,7 +121,7 @@ implied
 See
 the
 License
-*
+#
 for
 the
 specific
@@ -133,11 +132,11 @@ and
 limitations
 under
 the
-*
+#
 License
 .
-*
-*
+#
+#
 The
 Original
 Code
@@ -147,8 +146,8 @@ mozilla
 org
 code
 .
-*
-*
+#
+#
 The
 Initial
 Developer
@@ -157,12 +156,10 @@ the
 Original
 Code
 is
-*
-Netscape
-Communications
-Corporation
-.
-*
+#
+Mozilla
+Foundation
+#
 Portions
 created
 by
@@ -174,8 +171,8 @@ Copyright
 (
 C
 )
-2003
-*
+2010
+#
 the
 Initial
 Developer
@@ -184,15 +181,15 @@ All
 Rights
 Reserved
 .
-*
-*
+#
+#
 Contributor
 (
 s
 )
 :
-*
-*
+#
+#
 Alternatively
 the
 contents
@@ -206,7 +203,7 @@ under
 the
 terms
 of
-*
+#
 either
 the
 GNU
@@ -224,7 +221,7 @@ GPL
 "
 )
 or
-*
+#
 the
 GNU
 Lesser
@@ -243,7 +240,7 @@ the
 LGPL
 "
 )
-*
+#
 in
 which
 case
@@ -258,7 +255,7 @@ LGPL
 are
 applicable
 instead
-*
+#
 of
 those
 above
@@ -276,7 +273,7 @@ of
 this
 file
 only
-*
+#
 under
 the
 terms
@@ -293,7 +290,7 @@ to
 allow
 others
 to
-*
+#
 use
 your
 version
@@ -308,7 +305,7 @@ the
 MPL
 indicate
 your
-*
+#
 decision
 by
 deleting
@@ -321,7 +318,7 @@ them
 with
 the
 notice
-*
+#
 and
 other
 provisions
@@ -338,7 +335,7 @@ you
 do
 not
 delete
-*
+#
 the
 provisions
 above
@@ -352,7 +349,7 @@ of
 this
 file
 under
-*
+#
 the
 terms
 of
@@ -367,8 +364,8 @@ or
 the
 LGPL
 .
-*
-*
+#
+#
 *
 *
 *
@@ -382,46 +379,101 @@ BLOCK
 *
 *
 *
-*
+DEPTH
+=
+.
+.
 /
-#
-ifndef
-_NECKO_CONFIG_H_
-#
-define
-_NECKO_CONFIG_H_
-#
-undef
-NECKO_DISK_CACHE
-#
-undef
-NECKO_COOKIES
-#
-undef
-NECKO_WIFI
-#
-undef
-NECKO_PROTOCOL_about
-#
-undef
-NECKO_PROTOCOL_data
-#
-undef
-NECKO_PROTOCOL_device
-#
-undef
-NECKO_PROTOCOL_file
-#
-undef
-NECKO_PROTOCOL_ftp
-#
-undef
-NECKO_PROTOCOL_http
-#
-undef
-NECKO_PROTOCOL_res
-#
-undef
-NECKO_PROTOCOL_viewsource
-#
-endif
+.
+.
+/
+.
+.
+topsrcdir
+=
+top_srcdir
+srcdir
+=
+srcdir
+VPATH
+=
+srcdir
+include
+(
+DEPTH
+)
+/
+config
+/
+autoconf
+.
+mk
+MODULE
+=
+deviceprotocol
+LIBRARY_NAME
+=
+nkdevice_s
+FORCE_STATIC_LIB
+=
+1
+LIBXUL_LIBRARY
+=
+1
+CPPSRCS
+=
+\
+nsDeviceChannel
+.
+cpp
+\
+nsDeviceProtocolHandler
+.
+cpp
+\
+(
+NULL
+)
+LOCAL_INCLUDES
+=
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+.
+.
+/
+base
+/
+src
+/
+\
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+file
+\
+(
+NULL
+)
+include
+(
+topsrcdir
+)
+/
+config
+/
+rules
+.
+mk
