Bug 589262 - TM: Move GCStats into separate file. r=igor
UltraBlame original commit: 1558cef8a8a0a6cfbb59fd90902a5df6ce00f119

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -829,6 +829,10 @@ jsgcchunk
 .
 cpp
 \
+jsgcstats
+.
+cpp
+\
 jshash
 .
 cpp
@@ -1052,6 +1056,10 @@ jsgc
 h
 \
 jsgcchunk
+.
+h
+\
+jsgcstats
 .
 h
 \
