bug 490705 - Support Audio Data API: Get, Manipulate, Play & Save. r=smaug+kinetik+peterv, sr=vlad, a=vlad
UltraBlame original commit: 081a707a76b8f46bc648ca3177dcefe9f21f6da9

--- a/content/media/test/Makefile.in
+++ b/content/media/test/Makefile.in
@@ -985,6 +985,10 @@ use_large_cache
 .
 js
 \
+test_audiowrite
+.
+html
+\
 (
 NULL
 )
@@ -1314,6 +1318,10 @@ overhang
 .
 ogg
 \
+file_a4_tone
+.
+ogg
+\
 (
 NULL
 )
@@ -1462,6 +1470,22 @@ sjs
 contentDuration7
 .
 sjs
+\
+test_a4_tone
+.
+html
+\
+file_audio_event_adopt_iframe
+.
+html
+\
+test_audio_event_adopt
+.
+html
+\
+test_framebuffer
+.
+html
 \
 (
 NULL
