Bug 586754 Change xpcshell to use $relativesrcdir instead of $module for android support a=NPOTB r=mitchell.field
UltraBlame original commit: 49beef9387a0718f1b023d749a0b6f8af2c40b94

--- a/netwerk/test/Makefile.in
+++ b/netwerk/test/Makefile.in
@@ -408,6 +408,11 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+netwerk
+/
+test
 include
 (
 DEPTH
@@ -776,7 +781,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
@@ -806,7 +811,7 @@ _tests
 xpcshell
 /
 (
-MODULE
+relativesrcdir
 )
 /
 unit
