--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -940,6 +940,14 @@ browser_inspector_scrolling
 .
 js
 \
+browser_inspector_store
+.
+js
+\
+browser_inspector_tab_switch
+.
+js
+\
 browser_pageInfo
 .
 js
