Backed out changeset 49beef9387a0 due to Xpcshell orange a=backout
UltraBlame original commit: b5567c5bbda9d17baa2bb76f27e5b6836252d1cf

--- a/netwerk/test/Makefile.in
+++ b/netwerk/test/Makefile.in
@@ -408,11 +408,6 @@ srcdir
 VPATH
 =
 srcdir
-relativesrcdir
-=
-netwerk
-/
-test
 include
 (
 DEPTH
@@ -781,7 +776,7 @@ _tests
 xpcshell
 /
 (
-relativesrcdir
+MODULE
 )
 /
 unit
@@ -811,7 +806,7 @@ _tests
 xpcshell
 /
 (
-relativesrcdir
+MODULE
 )
 /
 unit
