Bug 488851 - Enable SSE2 for pixman r=jmuizelaar, a=joe
UltraBlame original commit: 6d435ea11c5565e9703a7289c8c40ef744187f40

--- a/gfx/cairo/libpixman/src/Makefile.in
+++ b/gfx/cairo/libpixman/src/Makefile.in
@@ -544,6 +544,8 @@ USE_SSE2
 1
 MMX_CFLAGS
 =
+SSE2_CFLAGS
+=
 endif
 ifeq
 (
@@ -583,32 +585,38 @@ MMX_CFLAGS
 mmmx
 -
 Winline
-#
-See
-bug
-410509
-why
-we
-can
-'
-t
-use
-SSE2
-yet
-on
-linux
-#
+ifeq
+(
+64
+(
+findstring
+64
+(
+OS_TEST
+)
+)
+)
 USE_SSE2
 =
 1
-#
-MMX_CFLAGS
-+
+endif
+ifdef
+HAVE_GCC_ALIGN_ARG_POINTER
+USE_SSE2
+=
+1
+endif
+ifdef
+USE_SSE2
+SSE2_CFLAGS
 =
 -
 msse
 -
 msse2
+-
+Winline
+endif
 ifneq
 (
 (
@@ -1220,7 +1228,7 @@ c
 COMPILE_CFLAGS
 )
 (
-MMX_CFLAGS
+SSE2_CFLAGS
 )
 (
 _VPATH_SRCS
