Bug 562195 - Shortcuts do not work in Qt Fennec. r=roc,masayuki,romaxa a=blocking-fennec
UltraBlame original commit: 3b7fdb70ac2bb9b756cc80faebd01e4888abddde

--- a/widget/src/shared/x11/Makefile.in
+++ b/widget/src/shared/x11/Makefile.in
@@ -392,6 +392,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -416,63 +419,20 @@ MODULE
 widget
 LIBRARY_NAME
 =
-widget_shared
+widget_shared_x11
 LIBXUL_LIBRARY
 =
 1
-DEFINES
-+
+CSRCS
 =
 \
--
-D_IMPL_NS_WIDGET
+keysym2ucs
+.
+c
 \
 (
 NULL
 )
-ifdef
-MOZ_X11
-PARALLEL_DIRS
-=
-x11
-endif
-/
-/
-MOZ_X11
-CPPSRCS
-=
-\
-WidgetUtils
-.
-cpp
-\
-(
-NULL
-)
-#
-we
-don
-'
-t
-want
-the
-shared
-lib
-but
-we
-want
-to
-force
-the
-creation
-of
-a
-static
-lib
-.
-FORCE_STATIC_LIB
-=
-1
 include
 (
 topsrcdir
