--- a/widget/src/gtk2/Makefile.in
+++ b/widget/src/gtk2/Makefile.in
@@ -441,10 +441,6 @@ mozcontainer
 .
 c
 \
-keysym2ucs
-.
-c
-\
 (
 NULL
 )
@@ -804,3 +800,24 @@ atk
 (
 NULL
 )
+ifdef
+MOZ_X11
+INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+shared
+/
+x11
+endif
+/
+/
+MOZ_X11
