--- a/widget/src/xpwidgets/Makefile.in
+++ b/widget/src/xpwidgets/Makefile.in
@@ -577,6 +577,30 @@ widget_shared
 (
 LIB_SUFFIX
 )
+ifdef
+MOZ_X11
+SHARED_LIBRARY_LIBS
++
+=
+.
+.
+/
+shared
+/
+x11
+/
+(
+LIB_PREFIX
+)
+widget_shared_x11
+.
+(
+LIB_SUFFIX
+)
+endif
+/
+/
+MOZ_X11
 LOCAL_INCLUDES
 +
 =
