Enable basic stereoscopic rendering support for D3D9 layers with 3D Vision. r=bas
UltraBlame original commit: e9992d1e029f147860cf747e76d86c30ac238edd

--- a/gfx/layers/Makefile.in
+++ b/gfx/layers/Makefile.in
@@ -562,9 +562,18 @@ MOZ_ENABLE_D3D9_LAYER
 EXPORTS
 +
 =
+\
 LayerManagerD3D9
 .
 h
+\
+DeviceManagerD3D9
+.
+h
+\
+(
+NULL
+)
 CPPSRCS
 +
 =
@@ -590,6 +599,14 @@ ColorLayerD3D9
 cpp
 \
 CanvasLayerD3D9
+.
+cpp
+\
+DeviceManagerD3D9
+.
+cpp
+\
+Nv3DVUtils
 .
 cpp
 \
