--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -440,12 +440,12 @@ MOZ_APP_NAME
 MOZ_APP_DISPLAYNAME
 =
 MOZ_APP_DISPLAYNAME
+MOZ_APP_UA_NAME
+=
+MOZ_APP_UA_NAME
 MOZ_APP_VERSION
 =
 MOZ_APP_VERSION
-MOZ_APP_UA_EXTRA
-=
-MOZ_APP_UA_EXTRA
 MOZ_PKG_SPECIAL
 =
 MOZ_PKG_SPECIAL
