--- a/configure.in
+++ b/configure.in
@@ -74783,13 +74783,34 @@ AC_SUBST
 (
 MOZ_APP_DISPLAYNAME
 )
+AC_DEFINE_UNQUOTED
+(
+MOZ_APP_UA_NAME
+"
+MOZ_APP_UA_NAME
+"
+)
+AC_SUBST
+(
+MOZ_APP_UA_NAME
+)
+AC_DEFINE_UNQUOTED
+(
+MOZ_APP_VERSION
+"
+MOZ_APP_VERSION
+"
+)
 AC_SUBST
 (
 MOZ_APP_VERSION
 )
-AC_SUBST
+AC_DEFINE_UNQUOTED
 (
-MOZ_APP_UA_EXTRA
+FIREFOX_VERSION
+"
+FIREFOX_VERSION
+"
 )
 AC_SUBST
 (
