--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -42217,7 +42217,15 @@ MOZ_APP_DISPLAYNAME
 )
 AC_SUBST
 (
+MOZ_APP_UA_NAME
+)
+AC_SUBST
+(
 MOZ_APP_VERSION
+)
+AC_SUBST
+(
+FIREFOX_VERSION
 )
 AC_SUBST
 (
