Bug 562313 - Statically link binary browser components into firefox.exe, r=ted
UltraBlame original commit: 7c0438df676786d8fa91cea905fb4d6371c404dd

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -1954,22 +1954,14 @@ nsURLFormatter
 .
 js
 #
-ifndef
-XP_OS2
+ifdef
+LIBXUL_SDK
 BINPATH
 /
 components
 /
 DLL_PREFIX
 browsercomps
-DLL_SUFFIX
-#
-else
-BINPATH
-/
-components
-/
-brwsrcmp
 DLL_SUFFIX
 #
 endif
