--- a/browser/installer/removed-files.in
+++ b/browser/installer/removed-files.in
@@ -208,6 +208,16 @@ components
 components
 .
 list
+#
+ifndef
+LIBXUL_SDK
+components
+/
+DLL_PREFIX
+browsercomps
+DLL_SUFFIX
+#
+endif
 components
 /
 DLL_PREFIX
