Backed out changeset 7c0438df6767
UltraBlame original commit: 4bbe896fbc0394cc59dd539097d56536c30ddedd

--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -1954,14 +1954,22 @@ nsURLFormatter
 .
 js
 #
-ifdef
-LIBXUL_SDK
+ifndef
+XP_OS2
 BINPATH
 /
 components
 /
 DLL_PREFIX
 browsercomps
+DLL_SUFFIX
+#
+else
+BINPATH
+/
+components
+/
+brwsrcmp
 DLL_SUFFIX
 #
 endif
