--- a/layout/base/tests/chrome/Makefile.in
+++ b/layout/base/tests/chrome/Makefile.in
@@ -475,6 +475,14 @@ chrome_content_integration_window
 .
 xul
 \
+test_default_background
+.
+xul
+\
+default_background_window
+.
+xul
+\
 test_printpreview
 .
 xul
