--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -446,6 +446,9 @@ MOZ_APP_UA_NAME
 MOZ_APP_VERSION
 =
 MOZ_APP_VERSION
+MOZ_UA_FIREFOX_VERSION
+=
+FIREFOX_VERSION
 MOZ_PKG_SPECIAL
 =
 MOZ_PKG_SPECIAL
