--- a/configure.in
+++ b/configure.in
@@ -74813,10 +74813,14 @@ MOZ_APP_VERSION
 )
 AC_DEFINE_UNQUOTED
 (
-FIREFOX_VERSION
+MOZ_UA_FIREFOX_VERSION
 "
 FIREFOX_VERSION
 "
+)
+AC_SUBST
+(
+MOZ_UA_FIREFOX_VERSION
 )
 AC_SUBST
 (
