Bug 572038 - Create new Tree Panel for Inspector (milestone 0.5), r=gavin, a=blocking2.0 (beta5)
UltraBlame original commit: 9cff67c76d75b3ec484440f519fb86d4bc935195

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -952,6 +952,18 @@ browser_inspector_tab_switch
 .
 js
 \
+browser_inspector_treePanel_output
+.
+js
+\
+browser_inspector_treePanel_input
+.
+html
+\
+browser_inspector_treePanel_result
+.
+html
+\
 browser_pageInfo
 .
 js
@@ -1041,6 +1053,10 @@ js
 discovery
 .
 html
+\
+domplate_test
+.
+js
 \
 moz
 .
