Bug 568634 - Update networking log entries with subsequent http transactions, r=sdwilsh, a=blocking2.0, beta5
UltraBlame original commit: 2d1aebfcf1ef4236ec17a44c853bbfd0ce7f839a

--- a/toolkit/components/console/hudservice/tests/browser/Makefile.in
+++ b/toolkit/components/console/hudservice/tests/browser/Makefile.in
@@ -456,6 +456,10 @@ browser_HUDServiceTestsAll
 .
 js
 \
+browser_webconsole_netlogging
+.
+js
+\
 (
 NULL
 )
@@ -471,6 +475,14 @@ html
 test
 -
 network
+.
+html
+\
+test
+-
+network
+-
+request
 .
 html
 \
