--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -449,6 +449,9 @@ MOZ_APP_VERSION
 MOZ_UA_FIREFOX_VERSION
 =
 FIREFOX_VERSION
+MOZ_UA_BUILDID
+=
+MOZ_UA_BUILDID
 MOZ_PKG_SPECIAL
 =
 MOZ_PKG_SPECIAL
