--- a/configure.in
+++ b/configure.in
@@ -74826,6 +74826,17 @@ AC_SUBST
 (
 FIREFOX_VERSION
 )
+AC_DEFINE_UNQUOTED
+(
+MOZ_UA_BUILDID
+"
+MOZ_UA_BUILDID
+"
+)
+AC_SUBST
+(
+MOZ_UA_BUILDID
+)
 AC_SUBST
 (
 MOZ_PKG_SPECIAL
