Bug 569402 - Show notifications in the Status Bar on Android r=blassey a=blocking-fennec
UltraBlame original commit: 8e6af865ffdb7200db3ef9f21df180179c754f8d

--- a/embedding/android/AndroidManifest.xml.in
+++ b/embedding/android/AndroidManifest.xml.in
@@ -667,6 +667,86 @@ filter
 activity
 >
 <
+activity
+android
+:
+name
+=
+"
+NotificationHandler
+"
+android
+:
+label
+=
+"
+MOZ_APP_DISPLAYNAME
+Notification
+"
+android
+:
+theme
+=
+"
+android
+:
+style
+/
+Theme
+.
+NoTitleBar
+"
+>
+<
+intent
+-
+filter
+>
+<
+action
+android
+:
+name
+=
+"
+org
+.
+mozilla
+.
+gecko
+.
+ACTION_ALERT_CLICK
+"
+/
+>
+<
+action
+android
+:
+name
+=
+"
+org
+.
+mozilla
+.
+gecko
+.
+ACTION_ALERT_CLEAR
+"
+/
+>
+<
+/
+intent
+-
+filter
+>
+<
+/
+activity
+>
+<
 receiver
 android
 :
