Backed out changeset e051ccf2361a
UltraBlame original commit: 0f7c277c48d672c2f2e87688f9535cf840109775

--- a/embedding/android/Makefile.in
+++ b/embedding/android/Makefile.in
@@ -453,24 +453,6 @@ java
 (
 NULL
 )
-PROCESSEDJAVAFILES
-=
-\
-App
-.
-java
-\
-Restarter
-.
-java
-\
-NotificationHandler
-.
-java
-\
-(
-NULL
-)
 DEFINES
 +
 =
@@ -487,6 +469,13 @@ DMOZ_APP_NAME
 =
 (
 MOZ_APP_NAME
+)
+\
+-
+DMOZ_APP_VERSION
+=
+(
+MOZ_APP_VERSION
 )
 \
 -
@@ -513,9 +502,13 @@ MOZ_APP_NAME
 .
 apk
 \
-(
-PROCESSEDJAVAFILES
-)
+App
+.
+java
+\
+Restarter
+.
+java
 \
 gecko
 .
@@ -583,7 +576,7 @@ content
 fennec_48x48
 .
 png
-ICON_PATH_HDPI
+ICON_PATH_HI
 =
 (
 topsrcdir
@@ -614,7 +607,7 @@ content
 icon48
 .
 png
-ICON_PATH_HDPI
+ICON_PATH_HI
 =
 (
 topsrcdir
@@ -630,54 +623,6 @@ icon64
 .
 png
 endif
-RES_DRAWABLE
-=
-\
-res
-/
-drawable
-/
-alertaddons
-.
-png
-\
-res
-/
-drawable
-/
-alertdownloads
-.
-png
-\
-(
-NULL
-)
-RES_DRAWABLE_HDPI
-=
-\
-res
-/
-drawable
--
-hdpi
-/
-alertaddons
-.
-png
-\
-res
-/
-drawable
--
-hdpi
-/
-alertdownloads
-.
-png
-\
-(
-NULL
-)
 NATIVE_LIBS
 =
 (
@@ -942,10 +887,10 @@ dex
 (
 JAVAFILES
 )
-(
-PROCESSEDJAVAFILES
-)
-R
+App
+.
+java
+Restarter
 .
 java
 (
@@ -973,10 +918,10 @@ srcdir
 JAVAFILES
 )
 )
-(
-PROCESSEDJAVAFILES
-)
-R
+App
+.
+java
+Restarter
 .
 java
 (
@@ -993,9 +938,12 @@ classes
 AndroidManifest
 .
 xml
-(
-PROCESSEDJAVAFILES
-)
+App
+.
+java
+Restarter
+.
+java
 :
 %
 :
@@ -1074,123 +1022,8 @@ drawable
 hdpi
 cp
 (
-ICON_PATH_HDPI
+ICON_PATH_HI
 )
-(
-RES_DRAWABLE
-)
-:
-(
-NSINSTALL
-)
--
-D
-res
-/
-drawable
-cp
-(
-topsrcdir
-)
-/
-mobile
-/
-app
-/
-android
-/
-drawable
-/
-*
-res
-/
-drawable
-/
-(
-RES_DRAWABLE_HDPI
-)
-:
-(
-NSINSTALL
-)
--
-D
-res
-/
-drawable
--
-hdpi
-cp
-(
-topsrcdir
-)
-/
-mobile
-/
-app
-/
-android
-/
-drawable
--
-hdpi
-/
-*
-res
-/
-drawable
--
-hdpi
-/
-R
-.
-java
-:
-(
-MOZ_APP_ICON
-)
-(
-RES_DRAWABLE
-)
-(
-RES_DRAWABLE_HDPI
-)
-(
-AAPT
-)
-package
--
-f
--
-M
-AndroidManifest
-.
-xml
--
-I
-(
-ANDROID_SDK
-)
-/
-android
-.
-jar
--
-S
-res
--
-J
-.
--
--
-custom
--
-package
-org
-.
-mozilla
-.
-gecko
 gecko
 .
 ap_
@@ -1214,12 +1047,6 @@ hdpi
 icon
 .
 png
-(
-RES_DRAWABLE
-)
-(
-RES_DRAWABLE_HDPI
-)
 (
 AAPT
 )
