--- a/embedding/android/Makefile.in
+++ b/embedding/android/Makefile.in
@@ -453,6 +453,24 @@ java
 (
 NULL
 )
+PROCESSEDJAVAFILES
+=
+\
+App
+.
+java
+\
+Restarter
+.
+java
+\
+NotificationHandler
+.
+java
+\
+(
+NULL
+)
 DEFINES
 +
 =
@@ -502,13 +520,9 @@ MOZ_APP_NAME
 .
 apk
 \
-App
-.
-java
-\
-Restarter
-.
-java
+(
+PROCESSEDJAVAFILES
+)
 \
 gecko
 .
@@ -576,7 +590,7 @@ content
 fennec_48x48
 .
 png
-ICON_PATH_HI
+ICON_PATH_HDPI
 =
 (
 topsrcdir
@@ -607,7 +621,7 @@ content
 icon48
 .
 png
-ICON_PATH_HI
+ICON_PATH_HDPI
 =
 (
 topsrcdir
@@ -623,6 +637,54 @@ icon64
 .
 png
 endif
+RES_DRAWABLE
+=
+\
+res
+/
+drawable
+/
+alertaddons
+.
+png
+\
+res
+/
+drawable
+/
+alertdownloads
+.
+png
+\
+(
+NULL
+)
+RES_DRAWABLE_HDPI
+=
+\
+res
+/
+drawable
+-
+hdpi
+/
+alertaddons
+.
+png
+\
+res
+/
+drawable
+-
+hdpi
+/
+alertdownloads
+.
+png
+\
+(
+NULL
+)
 NATIVE_LIBS
 =
 (
@@ -887,10 +949,10 @@ dex
 (
 JAVAFILES
 )
-App
-.
-java
-Restarter
+(
+PROCESSEDJAVAFILES
+)
+R
 .
 java
 (
@@ -918,10 +980,10 @@ srcdir
 JAVAFILES
 )
 )
-App
-.
-java
-Restarter
+(
+PROCESSEDJAVAFILES
+)
+R
 .
 java
 (
@@ -938,12 +1000,9 @@ classes
 AndroidManifest
 .
 xml
-App
-.
-java
-Restarter
-.
-java
+(
+PROCESSEDJAVAFILES
+)
 :
 %
 :
@@ -1022,8 +1081,123 @@ drawable
 hdpi
 cp
 (
-ICON_PATH_HI
+ICON_PATH_HDPI
 )
+(
+RES_DRAWABLE
+)
+:
+(
+NSINSTALL
+)
+-
+D
+res
+/
+drawable
+cp
+(
+topsrcdir
+)
+/
+mobile
+/
+app
+/
+android
+/
+drawable
+/
+*
+res
+/
+drawable
+/
+(
+RES_DRAWABLE_HDPI
+)
+:
+(
+NSINSTALL
+)
+-
+D
+res
+/
+drawable
+-
+hdpi
+cp
+(
+topsrcdir
+)
+/
+mobile
+/
+app
+/
+android
+/
+drawable
+-
+hdpi
+/
+*
+res
+/
+drawable
+-
+hdpi
+/
+R
+.
+java
+:
+(
+MOZ_APP_ICON
+)
+(
+RES_DRAWABLE
+)
+(
+RES_DRAWABLE_HDPI
+)
+(
+AAPT
+)
+package
+-
+f
+-
+M
+AndroidManifest
+.
+xml
+-
+I
+(
+ANDROID_SDK
+)
+/
+android
+.
+jar
+-
+S
+res
+-
+J
+.
+-
+-
+custom
+-
+package
+org
+.
+mozilla
+.
+gecko
 gecko
 .
 ap_
@@ -1047,6 +1221,12 @@ hdpi
 icon
 .
 png
+(
+RES_DRAWABLE
+)
+(
+RES_DRAWABLE_HDPI
+)
 (
 AAPT
 )
