Bug 579323. Part 1.4: Switch nsIFrameFrame users to use nsSubDocumentFrame.h. r=tnikkel
UltraBlame original commit: 248e40d56e0bf4c64b8386702f888f9fae37d268

--- a/layout/generic/Makefile.in
+++ b/layout/generic/Makefile.in
@@ -459,10 +459,6 @@ nsIFrame
 .
 h
 \
-nsIFrameFrame
-.
-h
-\
 nsIFrameUtil
 .
 h
@@ -492,6 +488,10 @@ nsIStatefulFrame
 h
 \
 nsFrameSelection
+.
+h
+\
+nsSubDocumentFrame
 .
 h
 \
