Bug 579323. Part 1.6: Clean up dead code, rename nsFrameFrame to nsSubDocumentFrame. r=tnikkel
UltraBlame original commit: b002a8eb529f574d4ab07790510a15e5071c8cd2

--- a/layout/generic/Makefile.in
+++ b/layout/generic/Makefile.in
@@ -559,10 +559,6 @@ nsFrame
 .
 cpp
 \
-nsFrameFrame
-.
-cpp
-\
 nsFrameList
 .
 cpp
@@ -648,6 +644,10 @@ nsSimplePageSequence
 cpp
 \
 nsSplittableFrame
+.
+cpp
+\
+nsSubDocumentFrame
 .
 cpp
 \
