Bug 489813 - Fire timeout error if provider fails to response after initial response.  Also cleans up test. r=smaug a=jst
UltraBlame original commit: 0d8d6369655d6b16c11cbf97afa761890016634c

--- a/dom/tests/mochitest/geolocation/Makefile.in
+++ b/dom/tests/mochitest/geolocation/Makefile.in
@@ -442,7 +442,27 @@ mk
 _TEST_FILES
 =
 \
-test_manyCurrentSerial
+test_allowCurrent
+.
+html
+\
+test_allowWatch
+.
+html
+\
+test_cancelCurrent
+.
+html
+\
+test_cancelWatch
+.
+html
+\
+test_clearWatch
+.
+html
+\
+test_clearWatch_invalid
 .
 html
 \
@@ -450,7 +470,7 @@ test_manyCurrentConcurrent
 .
 html
 \
-test_garbageWatch
+test_manyCurrentSerial
 .
 html
 \
@@ -466,23 +486,7 @@ test_manyWindows
 .
 html
 \
-test_allowCurrent
-.
-html
-\
-test_allowWatch
-.
-html
-\
-test_clearWatch
-.
-html
-\
-test_clearWatch_invalid
-.
-html
-\
-test_timeoutWatch
+test_optional_api_params
 .
 html
 \
@@ -490,7 +494,11 @@ test_windowClose
 .
 html
 \
-windowTest
+test_timerRestartWatch
+.
+html
+\
+geolocation
 .
 html
 \
@@ -498,38 +506,17 @@ geolocation_common
 .
 js
 \
-geolocation
-.
-html
-\
-test_optional_api_params
-.
-html
-\
 network_geolocation
 .
 sjs
 \
-(
-NULL
-)
-ifndef
-MOZ_PHOENIX
-_TEST_FILES
-+
-=
-test_cancelCurrent
-.
-html
-\
-test_cancelWatch
+windowTest
 .
 html
 \
 (
 NULL
 )
-endif
 libs
 :
 :
