Bug 586836 - Support Meego Network Managment. r=doug.turner a=blocking-fennec
UltraBlame original commit: fdf35ea63a85e14baa0f496fd4f1478ad01ef300

--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -1794,6 +1794,9 @@ MOZ_QT_CFLAGS
 MOZ_QT_LIBS
 =
 MOZ_QT_LIBS
+MOZ_ENABLE_QTNETWORK
+=
+MOZ_ENABLE_QTNETWORK
 MOZ_ENABLE_MEEGOTOUCH
 =
 MOZ_ENABLE_MEEGOTOUCH
