--- a/configure.in
+++ b/configure.in
@@ -40447,6 +40447,38 @@ fi
 MOC
 =
 HOST_MOC
+MOZ_ENABLE_QTNETWORK
+=
+PKG_CHECK_MODULES
+(
+_QTNETWORK
+QtNetwork
+>
+=
+4
+.
+7
+MOZ_ENABLE_QTNETWORK
+=
+1
+MOZ_ENABLE_QTNETWORK
+=
+)
+if
+test
+"
+MOZ_ENABLE_QTNETWORK
+"
+;
+then
+MOZ_ENABLE_QTNETWORK
+=
+1
+AC_DEFINE
+(
+MOZ_ENABLE_QTNETWORK
+)
+fi
 fi
 AC_SUBST
 (
@@ -40471,6 +40503,10 @@ MOZ_ENABLE_PHOTON
 AC_SUBST
 (
 MOZ_ENABLE_QT
+)
+AC_SUBST
+(
+MOZ_ENABLE_QTNETWORK
 )
 AC_SUBST
 (
@@ -55861,7 +55897,6 @@ dnl
 =
 dnl
 =
-Disable
 libconic
 dnl
 =
@@ -55920,9 +55955,38 @@ dnl
 =
 =
 =
+dnl
+superseded
+by
+QtNetwork
+starting
+from
+4
+.
+7
 MOZ_ENABLE_LIBCONIC
 =
 1
+if
+test
+-
+n
+"
+MOZ_ENABLE_QT
+"
+;
+then
+if
+test
+"
+MOZ_ENABLE_QTNETWORK
+"
+;
+then
+MOZ_ENABLE_LIBCONIC
+=
+fi
+fi
 MOZ_ARG_DISABLE_BOOL
 (
 libconic
