--- a/netwerk/base/src/Makefile.in
+++ b/netwerk/base/src/Makefile.in
@@ -623,39 +623,6 @@ nsURLHelperOS2
 .
 cpp
 else
-ifdef
-MOZ_ENABLE_LIBCONIC
-CPPSRCS
-+
-=
-nsAutodialMaemo
-.
-cpp
-CPPSRCS
-+
-=
-nsNativeConnectionHelper
-.
-cpp
-LOCAL_INCLUDES
-+
-=
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-.
-.
-/
-system
-/
-maemo
-endif
 ifeq
 (
 (
@@ -718,6 +685,69 @@ nsURLHelperUnix
 .
 cpp
 endif
+endif
+endif
+ifdef
+MOZ_PLATFORM_MAEMO
+CPPSRCS
++
+=
+nsNativeConnectionHelper
+.
+cpp
+ifdef
+MOZ_ENABLE_LIBCONIC
+CPPSRCS
++
+=
+nsAutodialMaemo
+.
+cpp
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+.
+.
+/
+system
+/
+maemo
+endif
+ifdef
+MOZ_ENABLE_QTNETWORK
+CPPSRCS
++
+=
+nsAutodialQt
+.
+cpp
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+.
+.
+/
+system
+/
+qt
 endif
 endif
 EXTRA_COMPONENTS
