--- a/netwerk/system/qt/Makefile.in
+++ b/netwerk/system/qt/Makefile.in
@@ -142,10 +142,9 @@ The
 Original
 Code
 is
-mozilla
-.
-org
-code
+Nokia
+Corporation
+Code
 .
 #
 #
@@ -158,8 +157,9 @@ Original
 Code
 is
 #
-Juan
-Lang
+Nokia
+Corporation
+.
 #
 Portions
 created
@@ -172,7 +172,7 @@ Copyright
 (
 C
 )
-2006
+2010
 #
 the
 Initial
@@ -189,6 +189,17 @@ Contributor
 s
 )
 :
+#
+Jeremias
+Bosch
+<
+jeremias
+.
+bosch
+gmail
+.
+com
+>
 #
 #
 Alternatively
@@ -387,6 +398,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -409,56 +423,30 @@ mk
 MODULE
 =
 necko
-ifeq
-(
-(
-OS_ARCH
-)
-WINNT
-)
-DIRS
+LIBRARY_NAME
+=
+neckosystem_s
+LIBXUL_LIBRARY
+=
+1
+FORCE_STATIC_LIB
+=
+1
+CPPSRCS
 +
 =
-win32
-endif
-ifeq
+\
+nsQtNetworkLinkService
+.
+cpp
+\
+nsQtNetworkManager
+.
+cpp
+\
 (
-(
-OS_ARCH
+NULL
 )
-WINCE
-)
-DIRS
-+
-=
-wince
-endif
-ifeq
-(
-cocoa
-(
-MOZ_WIDGET_TOOLKIT
-)
-)
-DIRS
-+
-=
-mac
-endif
-ifdef
-MOZ_ENABLE_LIBCONIC
-DIRS
-+
-=
-maemo
-endif
-ifdef
-MOZ_ENABLE_QTNETWORK
-DIRS
-+
-=
-qt
-endif
 include
 (
 topsrcdir
@@ -469,3 +457,35 @@ config
 rules
 .
 mk
+DEFINES
++
+=
+-
+DIMPL_NS_NET
+OS_INCLUDES
++
+=
+(
+GLIB_CFLAGS
+)
+(
+MOZ_QT_CFLAGS
+)
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+.
+.
+/
+base
+/
+src
