Bug 587853 - Use PR_ATOMIC_{INCREMENT,DECREMENT} macros for threadsafe addref / release. r+a2.0=bsmedberg
UltraBlame original commit: 93dab0790dca83a8d1525dd7fcfb09bb3bd9bb5c

--- a/xpcom/base/Makefile.in
+++ b/xpcom/base/Makefile.in
@@ -427,6 +427,31 @@ MOZILLA_INTERNAL_API
 LIBXUL_LIBRARY
 =
 1
+#
+TODO
+:
+we
+do
+this
+in
+crashreporter
+too
+should
+be
+centralized
+ifeq
+(
+(
+OS_ARCH
+)
+Linux
+)
+DEFINES
++
+=
+-
+DXP_LINUX
+endif
 CPPSRCS
 =
 \
@@ -483,6 +508,10 @@ nsStackWalk
 cpp
 \
 nsMemoryReporterManager
+.
+cpp
+\
+FunctionTimer
 .
 cpp
 \
@@ -547,6 +576,19 @@ nsWeakPtr
 h
 \
 nsInterfaceRequestorAgg
+.
+h
+\
+(
+NULL
+)
+EXPORTS_NAMESPACES
+=
+mozilla
+EXPORTS_mozilla
+=
+\
+FunctionTimer
 .
 h
 \
@@ -626,6 +668,10 @@ nsISupportsBase
 h
 \
 nscore
+.
+h
+\
+nsAtomicRefcnt
 .
 h
 \
