Bug 589598: InstallTrigger is not defined for frames inside webpages. r=dtownsend, a=blocking-betaN
UltraBlame original commit: be48a89b9561b85b4a561286be64d9590a1a8bcb

--- a/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
+++ b/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
@@ -452,6 +452,10 @@ browser_unsigned_trigger
 .
 js
 \
+browser_unsigned_trigger_iframe
+.
+js
+\
 browser_whitelist
 .
 js
@@ -677,6 +681,10 @@ enabled
 html
 \
 installtrigger
+.
+html
+\
+installtrigger_frame
 .
 html
 \
