b=590244; update ANGLE to r385; r=vlad; a=b
UltraBlame original commit: 09872e2e2130f663f5d5e90500e3b4dfc679548a

--- a/gfx/angle/src/libEGL/libEGL.vcproj
+++ b/gfx/angle/src/libEGL/libEGL.vcproj
@@ -303,7 +303,7 @@ VCLinkerTool
 AdditionalDependencies
 =
 "
-d3d9
+dxguid
 .
 lib
 "
@@ -764,7 +764,7 @@ VCLinkerTool
 AdditionalDependencies
 =
 "
-d3d9
+dxguid
 .
 lib
 "
