Patch 2 (tests only) - Bug 583408 - Notify user when the certificate attribute check fails. r=dtownsend, a=blocking2.0-beta6
UltraBlame original commit: 3c3c95c37d204897dfef2e050368f2117ea9b097

--- a/toolkit/mozapps/update/test/chrome/Makefile.in
+++ b/toolkit/mozapps/update/test/chrome/Makefile.in
@@ -611,11 +611,31 @@ test_0113_showNeverForVersionRemovedWithPref
 .
 xul
 \
-test_0120_cert_valid_attributes_not_builtin
+test_0121_check_requireBuiltinCert
 .
 xul
 \
-test_0121_cert_invalid_attribute_name
+test_0122_check_allowNonBuiltinCert_validCertAttrs
+.
+xul
+\
+test_0123_check_allowNonBuiltinCert_noCertAttrsCheck
+.
+xul
+\
+test_0131_check_invalidCertAttrs_noUpdate
+.
+xul
+\
+test_0132_check_invalidCertAttrs_hasUpdate
+.
+xul
+\
+test_0141_notify_invalidCertAttrs_noUpdate
+.
+xul
+\
+test_0142_notify_invalidCertAttrs_hasUpdate
 .
 xul
 \
