--- a/browser/installer/windows/nsis/defines.nsi.in
+++ b/browser/installer/windows/nsis/defines.nsi.in
@@ -380,3 +380,111 @@ Windows
 "
 #
 endif
+#
+File
+details
+shared
+by
+both
+the
+installer
+and
+uninstaller
+VIProductVersion
+"
+1
+.
+0
+.
+0
+.
+0
+"
+VIAddVersionKey
+"
+ProductName
+"
+"
+{
+BrandShortName
+}
+"
+VIAddVersionKey
+"
+CompanyName
+"
+"
+{
+CompanyName
+}
+"
+#
+ifdef
+MOZ_OFFICIAL_BRANDING
+VIAddVersionKey
+"
+LegalTrademarks
+"
+"
+{
+BrandShortName
+}
+is
+a
+Trademark
+of
+The
+Mozilla
+Foundation
+.
+"
+#
+endif
+VIAddVersionKey
+"
+LegalCopyright
+"
+"
+{
+CompanyName
+}
+"
+VIAddVersionKey
+"
+FileVersion
+"
+"
+{
+AppVersion
+}
+"
+VIAddVersionKey
+"
+ProductVersion
+"
+"
+{
+AppVersion
+}
+"
+#
+Comments
+is
+not
+used
+but
+left
+below
+commented
+out
+for
+future
+reference
+#
+VIAddVersionKey
+"
+Comments
+"
+"
+Comments
+"
