Bug 240933 - Part 7: Collapse the selection in textarea's to the trailing BR if needed after every edit operation; r,a=roc
UltraBlame original commit: b35bf5d836678c5d418b088bbfa52128f00fe623

--- a/layout/base/tests/Makefile.in
+++ b/layout/base/tests/Makefile.in
@@ -653,6 +653,26 @@ ref
 .
 html
 \
+bug240933
+-
+1
+.
+html
+\
+bug240933
+-
+2
+.
+html
+\
+bug240933
+-
+1
+-
+ref
+.
+html
+\
 bug482484
 .
 html
