Disable browser_drag.js r=dao a=ehsan
UltraBlame original commit: e908e758168605446fd3f1ada5f5e14c61653861

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -669,6 +669,26 @@ bug
 #
 480169
 )
+#
+browser_drag
+.
+js
+is
+disabled
+as
+it
+needs
+to
+be
+updated
+for
+the
+new
+behavior
+from
+bug
+320638
+.
 _BROWSER_FILES
 =
 \
@@ -897,10 +917,6 @@ browser_ctrlTab
 js
 \
 browser_discovery
-.
-js
-\
-browser_drag
 .
 js
 \
