Bug 572038 - Create new Tree Panel for Inspector, r=gavin, a=blocking2.0
UltraBlame original commit: deeb4cf3baba1f15504e04fc91b36751c68f20a7

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -976,6 +976,18 @@ browser_inspector_tab_switch
 .
 js
 \
+browser_inspector_treePanel_output
+.
+js
+\
+browser_inspector_treePanel_input
+.
+html
+\
+browser_inspector_treePanel_result
+.
+html
+\
 browser_pageInfo
 .
 js
@@ -1065,6 +1077,10 @@ js
 discovery
 .
 html
+\
+domplate_test
+.
+js
 \
 moz
 .
