--- a/docshell/test/chrome/Makefile.in
+++ b/docshell/test/chrome/Makefile.in
@@ -482,6 +482,10 @@ html
 headers
 ^
 \
+582176_dummy
+.
+html
+\
 (
 NULL
 )
@@ -641,6 +645,14 @@ test_bug396649
 xul
 \
 bug396649_window
+.
+xul
+\
+test_bug582176
+.
+xul
+\
+bug582176_window
 .
 xul
 \
