Test for bug 590812. r=jst a=test-only
UltraBlame original commit: 83e9c68be99dc3a13080639d6f3d52ed30a0aa0c

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1306,6 +1306,20 @@ file_bug590870
 .
 html
 \
+test_bug590812
+.
+html
+\
+file_bug590812
+.
+xml
+\
+file_bug590812
+-
+ref
+.
+xhtml
+\
 test_bug368972
 .
 html
