Bug 593377 bug 585922 killed all tests in dom/tests/browser r=bzbarsky, a=blocking2.0 final+
UltraBlame original commit: a9a1bbd4176f1a5653408edb0109325719d44055

--- a/dom/tests/browser/Makefile.in
+++ b/dom/tests/browser/Makefile.in
@@ -435,9 +435,17 @@ browser_focus_steal_from_chrome
 .
 js
 \
+(
+warning
 browser_autofocus_background
 .
 js
+temporarily
+disabled
+see
+bug
+593378
+)
 \
 (
 NULL
