--- a/toolkit/components/contentprefs/tests/Makefile.in
+++ b/toolkit/components/contentprefs/tests/Makefile.in
@@ -441,6 +441,38 @@ MOZ_PHOENIX
 XPCSHELL_TESTS
 =
 unit
+ifdef
+MOZ_IPC
+#
+FIXME
+/
+bug
+575918
+:
+out
+-
+of
+-
+process
+xpcshell
+is
+broken
+on
+OS
+X
+ifneq
+(
+(
+OS_ARCH
+)
+Darwin
+)
+XPCSHELL_TESTS
++
+=
+unit_ipc
+endif
+endif
 endif
 include
 (
