Bug 592338: Provide proper feedback when trying to install a persona with a non-default theme. r=gavin, a=blocking-b6
UltraBlame original commit: 324ba96157fb970e15bc633c44575961c9150558

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -916,6 +916,10 @@ browser_bug585830
 .
 js
 \
+browser_bug592338
+.
+js
+\
 browser_contextSearchTabPosition
 .
 js
@@ -1077,6 +1081,10 @@ js
 browser_visibleTabs_tabPreview
 .
 js
+\
+bug592338
+.
+html
 \
 discovery
 .
