Bug 591070: Support specifying an XPI hash through the initial HTTPS request such that redirects to HTTP can be followed securely. r=robstrong, a=blocking-b6
UltraBlame original commit: 552065e24bc8d68c4f13224d958caea72ebcc20c

--- a/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
+++ b/toolkit/mozapps/extensions/test/xpinstall/Makefile.in
@@ -608,6 +608,26 @@ browser_trigger_redirect
 .
 js
 \
+browser_httphash
+.
+js
+\
+browser_httphash2
+.
+js
+\
+browser_httphash3
+.
+js
+\
+browser_httphash4
+.
+js
+\
+browser_httphash5
+.
+js
+\
 unsigned
 .
 xpi
@@ -697,6 +717,10 @@ authRedirect
 sjs
 \
 cookieRedirect
+.
+sjs
+\
+hashRedirect
 .
 sjs
 \
