--- a/modules/libpr0n/test/browser/Makefile.in
+++ b/modules/libpr0n/test/browser/Makefile.in
@@ -1,5 +1,4 @@
 #
-#
 *
 *
 *
@@ -158,9 +157,9 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+the
+Mozilla
+Foundation
 .
 #
 Portions
@@ -174,7 +173,7 @@ Copyright
 (
 C
 )
-2001
+2008
 #
 the
 Initial
@@ -208,6 +207,7 @@ terms
 of
 #
 either
+of
 the
 GNU
 General
@@ -223,8 +223,8 @@ the
 GPL
 "
 )
-or
 #
+or
 the
 GNU
 Lesser
@@ -392,6 +392,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -401,6 +404,15 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+modules
+/
+libpr0n
+/
+test
+/
+browser
 include
 (
 DEPTH
@@ -411,62 +423,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-imglib2
-GRE_MODULE
-=
-1
-EXPORTS
-=
-ImageErrors
-.
-h
-ImageLogging
-.
-h
-XPIDLSRCS
-=
-\
-imgICache
-.
-idl
-\
-imgIContainer
-.
-idl
-\
-imgIContainerDebug
-.
-idl
-\
-imgIContainerObserver
-.
-idl
-\
-imgIDecoderObserver
-.
-idl
-\
-imgIEncoder
-.
-idl
-\
-imgILoader
-.
-idl
-\
-imgIRequest
-.
-idl
-\
-imgITools
-.
-idl
-\
-(
-NULL
-)
 include
 (
 topsrcdir
@@ -477,3 +433,60 @@ config
 rules
 .
 mk
+_BROWSER_FILES
+=
+head
+.
+js
+\
+browser_image
+.
+js
+\
+image
+.
+html
+\
+imageX2
+.
+html
+\
+animated
+.
+gif
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_BROWSER_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+browser
+/
+(
+relativesrcdir
+)
